Fix wrapping issue

--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -58,5 +58,5 @@
 }
 
 .date {
-  @apply text-sm text-slate-400 uppercase lg:w-1/3;
+  @apply text-sm text-slate-400 uppercase;
 }
